--- a/.dumi/global.less
+++ b/.dumi/global.less
@@ -10,14 +10,22 @@ body {
   }
 }
 
-.dumi-default-previewer-meta {
-  border-top: none !important;
-}
+
 .dumi-default-content {
   .markdown {
+    ul {
+      li + li {
+        margin-top: 15px;
+      }
+  }
     @{dark-selector} & {
       color: @c-text-dark;
     }
+    h2 {
+      font-size: 28px;
+      margin-bottom: 25px;
+    }
+    h2, h4 { a{ display: none; } }
   }
 }
 
@@ -30,16 +38,13 @@ body {
 .dumi-default-previewer {
   border: none !important;
   margin-top: 15px !important;
-  margin-bottom: 15px !important;
-  .boxShaow();
-  border-radius: 15px !important;
-  padding-top: 25px;
+  margin-bottom: 50px !important;
+  // padding-top: 25px;
   .dumi-default-previewer-demo {
-    padding: 0;
-    padding-left: 25px;
-    padding-bottom: 15px;
+    // padding-left: 25px;
+    padding: 15px 0 20px 0;
    
-    input {
+    .input {
       min-width: 150px;
       padding: 8px 12px;
       border-radius: 12px;
@@ -49,11 +54,11 @@ body {
       box-shadow: 0px 0px 20px -18px;
       font-size: 16px;
       &:focus {
-        border-color:  @c-primary;
+        border-color: @c-primary;
       }
     
       &:hover {
-        border-color:  @c-primary;
+        border-color: @c-primary;
         transform: scale(0.95);
       }
     }
@@ -63,6 +68,15 @@ body {
       height: 30px;
       font-size: 16px;
       border-radius: 8px;
+    }
+  }
+  .dumi-default-previewer-meta {
+    border-top: none ;
+    // transition: all .5s;
+    .boxShaow();
+    &:hover {
+      .boxShaow();
+      border-radius: 15px !important;
     }
   }
   .dumi-default-source-code {
@@ -85,4 +99,3 @@ body {
   margin-top: 20px !important;
 }
 
-h2 { a{ display: none; } }
