--- a/.dumi/theme/builtins/mdh.less
+++ b/.dumi/theme/builtins/mdh.less
@@ -12,7 +12,8 @@
 
 .mdh-label {
   position: relative;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
+  margin-top: 30px;
   .icon {
     position: absolute;
     top: 50%;
@@ -24,7 +25,7 @@
   //   .mixin();
   //   margin-left: -10px;
   //   transform: translate(-100%, -50%);
-
+    
   // }
   // &::after {
   //   .mixin();
