--- a/src/style/form.less
+++ b/src/style/form.less
@@ -16,3 +16,17 @@
   opacity: 0;
   transition: all 0.3s;
 }
+
+.control-form {
+ &_row {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+ }
+ &_column {
+  display: block;
+  .control-form-item {
+    width: 100%;
+    }
+  }
+}
