docs: docs README.md

--- a/.dumi/component/Button/index.less
+++ b/.dumi/component/Button/index.less
@@ -12,7 +12,7 @@
   color: @c-white;
   &.plain-button {
     background: none;
-    border: 1px solid @c-primary;
+    border: 1px solid @c-primary-dark;
     font-weight: bold;
     color: @c-text;
     @{dark-selector} & {
