--- a/.dumi/component/Hero/ActionButton/index.less
+++ b/.dumi/component/Hero/ActionButton/index.less
@@ -8,7 +8,12 @@
 .github-button {
   margin-left: 30px !important;
   letter-spacing: 3px !important;
-  padding: 17px 40px !important;
+  padding: 0 !important;
   font-size: 16px !important;
-  
+  a{
+    display: inline-block;
+    text-decoration: none;
+    padding: 17px 40px ;
+    color: inherit;
+  }
 }
