--- a/.dumi/component/Hero/Feature/index.less
+++ b/.dumi/component/Hero/Feature/index.less
@@ -8,6 +8,13 @@
     text-align: center;
     width: 33.33333%;
     margin-top: 50px;
+    transition: all .5s;
+    padding: 10px 0;
+    
+    &:hover {
+      border-radius: 6px;
+      .boxShaow()
+    }
   }
   @media @tablet {
     .feature-item {
