--- a/.dumi/theme/styles/variables.less
+++ b/.dumi/theme/styles/variables.less
@@ -67,6 +67,8 @@
 @c-normal-boxShaow-dark: 0px 0px 8px 8px lighten(@c-site-bg-dark, 5%) ;
 @c-text-footer-dark:lighten(@c-text, 70%);
 
+@font-family: -apple-system,BlinkMacSystemFont,Segoe UI,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+
 @mobile: ~'only screen and (max-width: 767px)';
 @tablet: ~'only screen and (min-width: 768px) and (max-width: 1024px)';
 @desktop: ~'only screen and (min-width: 1025px)';
