--- a/.dumi/theme/slots/LangSwitch/index.less
+++ b/.dumi/theme/slots/LangSwitch/index.less
@@ -3,6 +3,9 @@
 .lang-switch-select {
   border-radius: 5px;
   margin-right: 35px;
+  &.MuiInputBase-root::before {
+    border: none;
+  }
   .MuiSelect-select {
     padding: 3px 8px;
     color: @c-text;
