--- a/.dumi/theme/slots/LangSwitch/index.less
+++ b/.dumi/theme/slots/LangSwitch/index.less
@@ -2,13 +2,15 @@
 
 .lang-switch-select {
   border-radius: 5px;
-  margin-right: 35px;
+  margin-left: 10px;
+  margin-right: 25px;
   &.MuiInputBase-root::before {
     border: none;
   }
   .MuiSelect-select {
     padding: 3px 8px;
     color: @c-text;
+    font-size: 14px;
     @{dark-selector} & {
       color: @c-text-dark;
     }
