--- a/.dumi/global.less
+++ b/.dumi/global.less
@@ -43,7 +43,16 @@ body {
     }
   }
   .dumi-default-content-footer {
-    display: none;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    border-top: 1px solid @c-border-light;
+    padding-top: 20px;
+    @{dark-selector} & {
+      border-top: 1px solid darken(@c-border-light, 60%);
+    }
+    nav {
+      display: none;
+    }
   }
 }
 
