docs: update docs

--- a/.dumi/theme/slots/Sidebar/index.less
+++ b/.dumi/theme/slots/Sidebar/index.less
@@ -73,7 +73,7 @@
       
       > a {
         display: block;
-        color: @c-text-secondary;
+        color: #000;
         font-size: 16px;
         line-height: 20px;
         text-decoration: none;
