chore: modify Variable naming

--- a/src/style/form.css
+++ b/src/style/form.css
@@ -56,7 +56,7 @@
 
 .react-form-simple-indicator {
   position: relative;
-  color: red;
+  color: #ff4d4f;
   font-size: 13px;
   top: 0;
   margin-left: 2px;
